feat:turntable004-最大宽高限制

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         box-shadow: 0 0 20px #b2a98d;
         width: 90vw;
         height: 90vw;
+        max-width: 500px;
+        max-height: 500px;
         margin: 0 auto;
       }
       .turntable-wrap .light {
